[package]
name = "elefren"
version = "1.0.0"
authors = ["Aaron Power <theaaronepower@gmail.com>", "Paul Woolcock <paul@woolcock.us>", "D. Scott Boggs <scott@tams.tech>"]
description = "A wrapper around the Mastodon API."
readme = "README.md"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "web-programming::http-client", "api-bindings"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/dscottboggs/elefren.git"

[package.metadata.docs.rs]
features = ["all"]

[dependencies]
futures = "0.3.25"
doc-comment = "0.3"
serde_json = "1"
serde_qs = "0.4.5"
serde_urlencoded = "0.6.1"
tap-reader = "1"
tungstenite = "0.18"
url = "1"
# Provides parsing for the link header in get_links() in page.rs
hyper-old-types = "0.11.0"
futures-util = "0.3.25"

[dependencies.uuid]
version = "1.2.2"
features = ["v4"]

[dependencies.log]
version = "0.4"
features = ["kv_unstable", "serde", "std", "kv_unstable_serde", "kv_unstable_std"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.envy]
version = "0.4"
optional = true

[dependencies.isolang]
version = "2.2"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
features = ["multipart", "json", "stream"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.toml]
version = "0.5"
optional = true

[dependencies.tokio]
version = "1.22.0"
features = ["rt-multi-thread", "macros"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["io"]

[dev-dependencies]
tokio-test = "0.4.2"
futures-util = "0.3.25"
indoc = "1.0"
pretty_env_logger = "0.3.0"
skeptic = "0.13"
tempfile = "3"
femme = "2.2.1"

[build-dependencies.skeptic]
version = "0.13"

[features]
all = ["toml", "json", "env"]
default = ["reqwest/default-tls"]
env = ["envy"]
json = []
rustls-tls = ["reqwest/rustls-tls"]
