[workspace]
resolver = "2"

members = [
    ".",
    "entities",
]

[workspace.package]
version = "1.2.2"
license = "MIT/Apache-2.0"
authors = ["Aaron Power <theaaronepower@gmail.com>", "Paul Woolcock <paul@woolcock.us>", "D. Scott Boggs <scott@tams.tech>"]
edition = "2021"
rust-version = "1.67"

[package]
name = "mastodon-async"
description = "A wrapper around the Mastodon API."
readme = "README.md"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "web-programming::http-client", "api-bindings"]
repository = "https://github.com/dscottboggs/mastodon-async.git"

version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["all"]

[dependencies.mastodon-async-entities]
path = "./entities"
version = "1"

[dependencies]
futures = "0.3.25"
doc-comment = "0.3"
serde_json = "1"
serde_urlencoded = "0.7.1"
tap-reader = "1"
url = "2"
futures-util = "0.3.25"
static_assertions = "1.1.0"
percent-encoding = "2.2.0"
thiserror = "1.0.38"
derive_deref = "1.1.1"
derive_is_enum_variant = "0.1.1"

[dependencies.parse_link_header]
version = "0.3.3"
features = ["url"]

[dependencies.uuid]
version = "1.2.2"
features = ["v4"]

[dependencies.log]
version = "0.4"
features = ["kv_unstable", "serde", "std", "kv_unstable_serde", "kv_unstable_std"]

[dependencies.time]
version = "0.3"
features = ["parsing", "serde", "formatting"]

[dependencies.envy]
version = "0.4"
optional = true

[dependencies.isolang]
version = "2.2"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
features = ["multipart", "json", "stream"]
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.toml]
version = "0.7"
optional = true

[dependencies.tokio]
version = "1.22.0"
features = ["macros", "io-util", "time"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["io"]

[dev-dependencies]
tokio-test = "0.4.2"
futures-util = "0.3.25"
indoc = "2.0"
skeptic = "0.13"
tempfile = "3"
# for examples:
femme = "2.2.1"
html2text = "0.6.0"
[dev-dependencies.criterion]
version = "0.5.1"
features = ["async_tokio"]

[build-dependencies.skeptic]
version = "0.13"

[features]
all = ["toml", "json", "env", "mt"]
default = ["reqwest/default-tls"]
env = ["envy"]
mt = ["tokio/rt-multi-thread"]
json = []
rustls-tls = ["reqwest/rustls-tls"]
