[package]
name = "mastodon-async-derive"
description = "Macros for creating objects used by the Mastodon API; part of mastodon-async"

version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"

[dependencies.syn]
version = "2"
features = ["full"]
