[package]
name = "mastodon-async-entities"
description = "Types for (de)serializing entities from the Mastodon API; part of mastodon-async"

version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
thiserror = "1"
static_assertions = "1"
derive_is_enum_variant = "0.1.1"

[dependencies.log]
version = "0.4"
features = ["kv_unstable", "serde", "std", "kv_unstable_serde", "kv_unstable_std"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.time]
version = "0.3"
features = ["parsing", "serde", "formatting"]

[dev-dependencies]
serde_json = "1.0.91"
